remove redundant array/list creations